--- a/source/dialogs/zone-track-properties/zone-track-properties-modal.html
+++ b/source/dialogs/zone-track-properties/zone-track-properties-modal.html
@@ -68,7 +68,7 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-5 normal-text" for="width">Width (inchs)</label>
                                 <div class="col-sm-7">
-                                    <input type="number" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
+                                    <input type="number" min="0.5" step="0.001" class="form-control wi-form-control" id="width" ng-model="wiModal.width">
                                 </div>
                             </div>
                         </div>
@@ -77,12 +77,20 @@
                             <div class="form-group">
                                 <label class="control-label col-sm-5 normal-text" for="parameters-set">Parameter Set</label>
                                 <div class="col-sm-7">
+                                    <select id="parameters-set" class="form-control wi-form-control">
+                                        <option value="">User defined</option>
+                                    </select>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label class="control-label col-sm-5 normal-text" for="zone-set">
                                   Zone Set</label>
-                                <div class="col-sm-7">
+                                <div class="col-sm-5">
+                                    <select id="zone-set" class="form-control wi-form-control" ng-options="zoneSet.name for zoneSet in wiModal.zoneSets" ng-model="wiModal.zoneSet" required>
+                                    </select>
+                                </div>
+                                <div class="col-sm-2">
+                                    <button type="button" class="btn btn-default" ng-click="wiModal.createZoneSet()">+</button>
                                 </div>
                             </div>
                         </div>
